--- a/news-and-events.html
+++ b/news-and-events.html
@@ -45,8 +45,10 @@
                         <li class="nav-item dropdown">
                             <a class="text-light nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">Gallery</a>
                             <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                <li><a class="text-danger dropdown-item" target="_blank" href="photos.html">Photos</a></li>
-                                <li><a class="text-danger dropdown-item" target="_blank" href="videos.html">Videos</a></li>
+                                <li><a class="text-danger dropdown-item" target="_blank" href="photos.html">Photos</a>
+                                </li>
+                                <li><a class="text-danger dropdown-item" target="_blank" href="videos.html">Videos</a>
+                                </li>
                             </ul>
                         </li>
                         <li class="nav-item">
@@ -65,7 +67,7 @@
     </header>
 
 
-    <!-- news and events -->
+    <!-- news -->
     <div class="container news-details">
         <div class="row">
             <div class="col-md-12 col-lg-12 col-sm-12 col-xs-12 text-center">
@@ -110,6 +112,67 @@
                             <p class="card-text">Admission Open</p>
                             <a href="images/pdf/admission-form.pdf" target="_blanck" class="btn btn-primary">Admission
                                 Form</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- events -->
+    <div class="events-details">
+        <div class="container">
+            <h2 class="text-center">Events</h2>
+        </div>
+        <div class="plantation-photos">
+            <div class="background-blur">
+                <div class="container">
+                    <h5 class="sub-heading">Plantation</h5>
+                    <div class="row">
+                        <div class="col-md-3 col-lg-3 col-sm-6 col-xs-12 imgs">
+                            <img src="/images/plantation (1).jpeg" alt="">
+                        </div>
+                        <div class="col-md-3 col-lg-3 col-sm-6 col-xs-12 imgs">
+                            <img src="/images/plantation (2).jpeg" alt="">
+                        </div>
+                        <div class="col-md-3 col-lg-3 col-sm-6 col-xs-12 imgs">
+                            <img src="/images/plantation (3).jpeg" alt="">
+                        </div>
+                        <div class="col-md-3 col-lg-3 col-sm-6 col-xs-12 imgs">
+                            <img src="/images/plantation (1).jpeg" alt="">
+                        </div>
+                        <div class="col-md-3 col-lg-3 col-sm-6 col-xs-12 imgs">
+                            <img src="/images/plantation (2).jpeg" alt="">
+                        </div>
+                        <div class="col-md-3 col-lg-3 col-sm-6 col-xs-12 imgs">
+                            <img src="/images/plantation (3).jpeg" alt="">
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="vaccination-photos">
+            <div class="background-blur">
+                <div class="container">
+                    <h5 class="sub-heading">Vaccination</h5>
+                    <div class="row">
+                        <div class="col-md-3 col-lg-3 col-sm-6 col-xs-12 imgs">
+                            <img src="/images/vaccination (1).jpeg" alt="">
+                        </div>
+                        <div class="col-md-3 col-lg-3 col-sm-6 col-xs-12 imgs">
+                            <img src="/images/vaccination (2).jpeg" alt="">
+                        </div>
+                        <div class="col-md-3 col-lg-3 col-sm-6 col-xs-12 imgs">
+                            <img src="/images/vaccination (1).jpeg" alt="">
+                        </div>
+                        <div class="col-md-3 col-lg-3 col-sm-6 col-xs-12 imgs">
+                            <img src="/images/vaccination (2).jpeg" alt="">
+                        </div>
+                        <div class="col-md-3 col-lg-3 col-sm-6 col-xs-12 imgs">
+                            <img src="/images/vaccination (1).jpeg" alt="">
+                        </div>
+                        <div class="col-md-3 col-lg-3 col-sm-6 col-xs-12 imgs">
+                            <img src="/images/vaccination (2).jpeg" alt="">
                         </div>
                     </div>
                 </div>
